discussion/kv_engine/137228/137228_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-41510: Fix infinite loop due to HdrHistogram being reset

Currently if a HdrHistogram has its reset() method called by one thread
(T1) and is being read by another (T2) using an HdrHistoram::Iterator.
There is the race that could cause the HdrHistoram::Iterator() to enter
an infinite loop.

This occurs as HdrHistogram's getNextValue() methods use HdrHistogam_c's
hdr_iter_next() which intern uses the following function:
static bool has_next(struct hdr_iter* iter)
{
        return iter->cumulative_count < iter->total_count;
}
Which logically checks that the total count the Iterator was
initialize with is > than the sum of all the counts its read from the
buckets in the histogram. The trouble is, that the reset() method
changes the bucket counts back to 0. Thus, meaning the condition
cumulative_count >= total_count may never be met.

To fix this wrap the std::unique_ptr<struct hdr_histogram> with a
folly::Synchronized<>. This allows us to take an exclusive lock on the
pointer when performing a reset() of the histogram and allows us to
ensure that no iterator is reading from the histogram, as the iterator
takes a non exclusive read lock for the lifetime of the
HdrHistogram::Iterator struct. This also ensures that
HdrHistogram::resize() is thread safe as we now take a write lock.

Change-Id: I8cf5eeb0ac3107ce20e915463be3db245c68c8b9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2020-10-01 13:21:10.000000000
Message: 
Uploaded patch set 10.
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2020-10-01 13:25:55.000000000
Message: 
Patch Set 10: Code-Review-1

Need to do some work on Iterator construction
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-10-01 13:32:43.000000000
Message: 
Patch Set 10: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4822/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.cc:140:38: error: "histoRLockPtr" is a private member of "HdrHistogram::Iterator" [clang-diagnostic-error]
    hdr_iter_linear_init(&iter, iter.histoRLockPtr->get(), valueUnitsPerBucket);
                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.h:103:24: note: declared private here
        HistoLockedPtr histoRLockPtr;
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.cc:148:25: error: "histoRLockPtr" is a private member of "HdrHistogram::Iterator" [clang-diagnostic-error]
            &iter, iter.histoRLockPtr->get(), firstBucketWidth, log_base);
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.h:103:24: note: declared private here
        HistoLockedPtr histoRLockPtr;
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.cc:156:25: error: "histoRLockPtr" is a private member of "HdrHistogram::Iterator" [clang-diagnostic-error]
            &iter, iter.histoRLockPtr->get(), ticksPerHalfDist);
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.h:103:24: note: declared private here
        HistoLockedPtr histoRLockPtr;
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.cc:162:40: error: "histoRLockPtr" is a private member of "HdrHistogram::Iterator" [clang-diagnostic-error]
    hdr_iter_recorded_init(&iter, iter.histoRLockPtr->get());
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.h:103:24: note: declared private here
        HistoLockedPtr histoRLockPtr;
                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4822/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.cc:140:38:
error: "histoRLockPtr" is a private member of "HdrHistogram::Iterator" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4822/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26619/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/utilities/hdrhistogram.cc:140:38:
error: "histoRLockPtr" is a private member of "HdrHistogram::Iterator"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26619/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30788/ : FAILURE

Compile error at ..\kv_engine\utilities\hdrhistogram.cc(140): error C2248: "HdrHistogram::Iterator::histoRLockPtr": cannot access private member declared in class "HdrHistogram::Iterator" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30788/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6234/ : FAILURE

Compile error at [2020-10-01T13:31:24.222Z] ../kv_engine/utilities/hdrhistogram.cc:140:38:
error: ?HdrHistogram::HistoLockedPtr HdrHistogram::Iterator::histoRLockPtr? is private within this context
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6234/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6114/ : FAILURE

Compile error at [2020-10-01T13:29:41.444Z] ../kv_engine/utilities/hdrhistogram.cc:140:38:
error: ?HdrHistogram::HistoLockedPtr HdrHistogram::Iterator::histoRLockPtr? is private within this context
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6114/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6342/ : FAILURE

Compile error at [2020-10-01T13:32:02.871Z] ../kv_engine/utilities/hdrhistogram.cc:140:38:
error: "histoRLockPtr" is a private member of "HdrHistogram::Iterator"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6342/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14009/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5194/ : FAILURE

Compile error at [2020-10-01T13:24:34.708Z] ../kv_engine/utilities/hdrhistogram.cc:140:38:
error: "histoRLockPtr" is a private member of "HdrHistogram::Iterator"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5194/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3349/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
